2008-05-11  Karl Berry  <karl@gnu.org>

	* util/texi2dvi (usage): give -l input samples as latex and texinfo,
	not LaTeX and Texinfo. 
	Report from Hilmar Preusse, 10 May 2008 15:03:23, Debian bug #472758.

	* install-info/tests/0051, 52: new tests for periods in item names.
	Bug report from Ulrich Mueller, 7 May 2008 01:56:38.

2008-05-10  Sergey Poznyakoff  <gray@gnu.org.ua>

	Handle multibyte encodings correctly.
	
	* info/display.c (ITER_SETBYTES,ITER_LIMIT): New defines.
	(process_node_text): New function.
	(display_node_text): New function.
	(display_update_one_window): Correctly process multibyte
	characters.
	* info/display.h (process_node_text): New function prototype.
	* info/info-utils.c (printed_representation): Rewrite to take into
	account multibyte sequences.
	* info/info-utils.h (printed_representation): Change prototype.
	* info/info.h: Include string.h, mbiter.h and mbchar.h.
	* info/window.c (calculate_line_starts ): Rewrite using
	process_node_text to take into account multibyte characters.

	Bootstrap from GNU gnulib 2008-04-23 06:09:44:
	
	* gnulib/lib/Makefile.am: Import mbchar, mbiter and mbschr.
	* gnulib/lib/sys_stat.in.h, gnulib/lib/wctype.in.h,
	gnulib/lib/sys/stat.h, gnulib/m4/gnulib-cache.m4,
	gnulib/m4/gnulib-comp.m4, gnulib/m4/sys_stat_h.m4,
	gnulib/m4/wctype.m4: Updated files.

2008-05-05  Karl Berry  <karl@gnu.org>

	* doc/info-stnd.texi (Stand-alone Info): rename node from What is Info?
	for sake of xref in info.texi.
	* doc/info.texi (Top): xref.

2008-04-30  Thomas Thorberger  <thor@erlm.siemens.de>  (tiny change)

	* install-info/install-info.c (split_entry): use valid pointer
	entry, not ptr.  bug-texinfo mail 30 Apr 2008 11:59:57.

2008-04-25  Peter Breitenlohner <peb@mppmu.mpg.de>

	* info/session.c (info_search_internal): cast to `char *' in
	order to avoid compiler warning.

2008-04-23  Bruno Haible  <bruno@clisp.org>

	Allow "gendocs -o /some/absolute/dir".
	* gendocs.sh (dotdot_outdir): New variable.
